tests/errors/sem.no-match.struct-param.or
main :: () -> void {
    arr_t :: struct(u: int) { arr: [u]int; };
    T :: (a: arr_t(!u)) {
        return;
    };

    T(10);
};
